--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -3,7 +3,7 @@
 }
 
 .doghouse{
-    background-image: url("../../webapp/images/—Pngtree—a\ lovely\ yellow\ kennel_4287032.png");
+    background-image: url("/images/—Pngtree—a\ lovely\ yellow\ kennel_4287032.png");
     width: 350px; height: 350px;
     background-size: contain;
     margin: 0; padding: 0;
@@ -13,7 +13,7 @@
 
 
 .grass{
-    background-image: url("../../webapp/images/fields-grass-clipart-12.jpg");
+    background-image: url("/images/fields-grass-clipart-12.jpg");
     width: 100%; height: 170px;
     background-size: contain;
     position: absolute;
@@ -22,7 +22,7 @@
 
 
 .dog{
-    background-image: url("../../webapp/images/dog-clipart-medium.png");
+    background-image: url("/images/dog-clipart-medium.png");
     width: 100px; height: 100px;
     background-size: contain; margin: 0; padding: 0;
     display: inline-block;
@@ -30,7 +30,7 @@
     /* float: left;    */
 }
 .cat{
-    background-image: url("../../webapp/images/Cat.png");
+    background-image: url("/images/Cat.png");
     width: 100px; height: 100px;
     background-size: contain;
     display: inline-block;
